Fix - Last update font too big for some months.

--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -8003,20 +8003,20 @@ picture {
 
 /* line 102, src/scss/_components/common/_updated.scss */
 .updated--medium .updated__data-1 {
-  font-size: 40px;
+  font-size: 35px;
 }
 
 @media screen and (min-width: 320px) {
   /* line 102, src/scss/_components/common/_updated.scss */
   .updated--medium .updated__data-1 {
-    font-size: calc(40px + 23 * (100vw - 320px) / 1045);
+    font-size: calc(35px + 13 * (100vw - 320px) / 1045);
   }
 }
 
 @media screen and (min-width: 1365px) {
   /* line 102, src/scss/_components/common/_updated.scss */
   .updated--medium .updated__data-1 {
-    font-size: 63px;
+    font-size: 48px;
   }
 }
 
@@ -8107,12 +8107,40 @@ picture {
 
 /* line 169, src/scss/_components/common/_updated.scss */
 .updated--small .updated__data-1 {
-  font-size: 40px;
+  font-size: 31px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 169, src/scss/_components/common/_updated.scss */
+  .updated--small .updated__data-1 {
+    font-size: calc(31px + 9 * (100vw - 320px) / 255);
+  }
+}
+
+@media screen and (min-width: 575px) {
+  /* line 169, src/scss/_components/common/_updated.scss */
+  .updated--small .updated__data-1 {
+    font-size: 40px;
+  }
 }
 
 /* line 172, src/scss/_components/common/_updated.scss */
 .updated--small .updated__data-1 span {
-  font-size: 69px;
+  font-size: 45px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 172, src/scss/_components/common/_updated.scss */
+  .updated--small .updated__data-1 span {
+    font-size: calc(45px + 24 * (100vw - 320px) / 255);
+  }
+}
+
+@media screen and (min-width: 575px) {
+  /* line 172, src/scss/_components/common/_updated.scss */
+  .updated--small .updated__data-1 span {
+    font-size: 69px;
+  }
 }
 
 /* line 180, src/scss/_components/common/_updated.scss */
@@ -8347,13 +8375,13 @@ picture {
   color: #0183b1;
   line-height: 1;
   text-transform: uppercase;
-  font-size: 40px;
+  font-size: 33px;
 }
 
 @media screen and (min-width: 320px) {
   /* line 310, src/scss/_components/common/_updated.scss */
   .updated__data-1 {
-    font-size: calc(40px + 43 * (100vw - 320px) / 1119);
+    font-size: calc(33px + 50 * (100vw - 320px) / 1119);
   }
 }
 
